# Mailing

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  data.json  deployment_script.sh  docker-compose.yml  entrypoint  env.sample  pyproject.toml  tasks.py
blog/: forms.py  models.py  urls.py
blog/migrations/: 0001_initial.py
config/: settings.py
config/config/: settings.py
mailing/: forms.py  urls.py  views.py
mailing/management/commands/: sendmessege.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailing/templates/mailing/: mailing_form.html  message_form.html
mailing/templates/mailing/includes/: inc_catalog_menu.html
main/: views.py
main/templates/main/: index.html
users/: forms.py  models.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
