[tool.poetry]
name = "mailing"
version = "0.1.0"
description = ""
authors = ["Михаил <misga.yats@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.3"
config = "^0.5.1"
psycopg2-binary = "^2.9.6"
transliterate = "^1.10.2"
celery = "^5.3.1"
redis = "^4.6.0"
django-celery-beat = "^2.5.0"
pillow = "^10.0.0"
flake8 = "^6.1.0"
pytz = "^2023.3"
docker = "^6.1.3"
python-dotenv = "^0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

